[tool.poetry]
name = "siamo_ragazzi"
version = "1.0.0"
description = "\"Siamo ragazzi\" meme generator"
authors = ["Stefano Pigozzi <me@steffo.eu>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.3.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.scripts]
"siamo-ragazzi" = "siamo_ragazzi.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
